Simplify housing model descriptions

--- a/index.html
+++ b/index.html
@@ -150,18 +150,18 @@
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Descripción</span>
-                <p class="description__headline">Vivienda compacta, funcional y eficiente.</p>
+                <span class="description__tag">Ficha rápida</span>
+                <p class="description__headline">44 m² listos con 2 dormitorios y 1 baño.</p>
 
                 <div class="description__body">
-                  <p>Casa Bixa es una vivienda industrializada de 44 m² diseñada para optimizar cada metro cuadrado sin resignar confort ni calidad constructiva. Es una solución ideal como primera vivienda, unidad para renta o proyecto de inversión.</p>
-                  <p>Integra cocina, comedor y living en un ambiente social luminoso, con dos dormitorios y un baño completo. El sistema AMZ de muros de hormigón asegura excelente desempeño térmico y acústico, rápida ejecución y costos controlados.</p>
+                  <p>Ambiente social integrado con cocina, living y comedor en línea directa al exterior.</p>
+                  <p>Formato compacto pensado para entrar rápido al lote y quedar habitable sin vueltas.</p>
                 </div>
 
                 <ul class="description__list">
-                  <li>Planta eficiente que prioriza la habitabilidad diaria y la luz natural.</li>
-                  <li>Terminaciones sólidas y modernas listas para habitar desde el primer día.</li>
-                  <li>Formato compacto pensado para vivir, alquilar o invertir con confianza.</li>
+                  <li>Superficie total: 44 m² cubiertos.</li>
+                  <li>Ambientes: 2 dormitorios + 1 baño completo.</li>
+                  <li>Ideal como primera vivienda o módulo de renta liviano.</li>
                 </ul>
               </div>
             </aside>
@@ -184,6 +184,9 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="model__summary">
+            <p>Bixa entra en casi cualquier terreno y se arma rápido; minimalista, luminosa y lista para disfrutar o poner a producir sin demoras.</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -214,17 +217,18 @@
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Descripción</span>
-                <p class="description__headline">Vivienda evolutiva industrializada, pensada para crecer sin obras disruptivas.</p>
+                <span class="description__tag">Ficha rápida</span>
+                <p class="description__headline">45 m² iniciales que crecen a 58 m² y 71 m² sin obra pesada.</p>
 
                 <div class="description__body">
-                  <p>Comenzás con un módulo completo y habitable, y crecés por etapas cuando lo necesites. Sistema planificado sin mudanzas ni obras disruptivas.</p>
+                  <p>Arrancás con un módulo listo para vivir y sumás dormitorios cuando haga falta.</p>
+                  <p>Todo el plan está pensado para ampliar sin romper lo ya terminado.</p>
                 </div>
 
                 <ul class="description__list">
-                  <li><strong>Etapa 1 (45 m²):</strong> Cocina-comedor-living integrados, 1 dormitorio, baño completo y galería semicubierta con asador.</li>
-                  <li><strong>Etapa 2 (58 m²):</strong> +12,80 m² con segundo dormitorio.</li>
-                  <li><strong>Etapa 3 (71 m²):</strong> +13 m² con tercer dormitorio. Programa familiar completo.</li>
+                  <li>Etapa 1: 45 m² con 1 dormitorio y baño completo.</li>
+                  <li>Etapa 2: 58 m² totales al agregar 1 dormitorio extra.</li>
+                  <li>Etapa 3: 71 m² finales con 3 dormitorios para familia completa.</li>
                 </ul>
               </div>
             </aside>
@@ -252,6 +256,9 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="model__summary">
+            <p>Camelia acompaña el crecimiento: arrancás liviano y seguís sumando metros cuando la vida lo pida, siempre con el mismo look prolijo y moderno.</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -281,19 +288,18 @@
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Descripción</span>
-                <p class="description__headline">Doble altura, terrazas y visuales abiertas para lotes con vistas.</p>
+                <span class="description__tag">Ficha rápida</span>
+                <p class="description__headline">160 m² en dos plantas con 4 dormitorios y 3 baños.</p>
 
                 <div class="description__body">
-                  <p>Pensada para que el paisaje entre a cada ambiente, combinando carpinterías de piso a techo con espacios de encuentro en diferentes alturas.</p>
-                  <p>Los recorridos internos balconean sobre el estar principal, generando perspectiva y amplitud sin perder intimidad en las áreas privadas.</p>
+                  <p>Doble altura central, terrazas y vidrio de piso a techo para lotes con buenas vistas.</p>
+                  <p>Zona social abajo, ala privada arriba y balconeo interno para darle aire al estar.</p>
                 </div>
 
                 <ul class="description__list">
-                  <li>Puente que balconea sobre el living y conecta con la zona íntima.</li>
-                  <li>Terraza privada en la suite principal para vistas despejadas.</li>
-                  <li>Ventanas DVH de piso a techo que enmarcan el exterior.</li>
-                  <li>Family room elevado listo para setear un cine en casa.</li>
+                  <li>Superficie: 160 m² totales.</li>
+                  <li>Programa: 4 dormitorios, 3 baños, family y terrazas.</li>
+                  <li>Garage lateral para acceso cómodo sin cortar el jardín.</li>
                 </ul>
               </div>
             </aside>
@@ -313,6 +319,9 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="model__summary">
+            <p>Belladona juega con alturas y ventanales para que el paisaje sea parte del interior; es la casa de fines de semana largos, reuniones grandes y atardeceres en la terraza.</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -342,18 +351,18 @@
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Descripción</span>
-                <p class="description__headline">Compacta y eficiente, ideal para lotes urbanos que piden luz natural.</p>
+                <span class="description__tag">Ficha rápida</span>
+                <p class="description__headline">78 m² con 2 dormitorios, 2 baños y patio central.</p>
 
                 <div class="description__body">
-                  <p>Una planta versátil que se organiza en torno a un patio interior, extendiendo la vida social hacia el exterior y permitiendo ventilación cruzada constante.</p>
+                  <p>Planta compacta que gira alrededor de un patio para sumar luz y ventilación cruzada.</p>
+                  <p>Social adelante, dormitorios al fondo y posibilidad de extender la galería.</p>
                 </div>
 
                 <ul class="description__list">
-                  <li>Living que se expande al patio para sumar metros de uso diario.</li>
-                  <li>Circulaciones optimizadas para aprovechar cada m² disponible.</li>
-                  <li>Listo para ampliaciones futuras sin modificar la estructura.</li>
-                  <li>Espacios de guardado modulables en cada dormitorio.</li>
+                  <li>Superficie: 78 m² totales.</li>
+                  <li>Programa: 2 dormitorios + 2 baños.</li>
+                  <li>Patio interior para iluminar y ventilar todos los ambientes.</li>
                 </ul>
               </div>
             </aside>
@@ -373,6 +382,9 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="model__summary">
+            <p>Bromelia es la opción urbana: entra en lotes ajustados, respira por el patio y mantiene el estilo limpio y cálido de toda la línea AMZ.</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -402,19 +414,18 @@
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Descripción</span>
-                <p class="description__headline">Línea minimalista y patio central como pulmón de luz.</p>
+                <span class="description__tag">Ficha rápida</span>
+                <p class="description__headline">140 m² con 3 dormitorios, 3 baños y patio vidriado.</p>
 
                 <div class="description__body">
-                  <p>La casa se organiza alrededor de un patio vidriado que marca el ritmo de las circulaciones y garantiza ventilación natural en todos los ambientes.</p>
-                  <p>Las galerías conectan interior y exterior, creando un recorrido fluido para recibir, cocinar y descansar sin perder vistas al jardín.</p>
+                  <p>Planta en torno a un patio central que lleva luz y aire a cada rincón.</p>
+                  <p>Galería lineal y doble ingreso para separar el uso diario del social.</p>
                 </div>
 
                 <ul class="description__list">
-                  <li>Patio vidriado que ordena la planta y aporta luz constante.</li>
-                  <li>Galería lineal vinculada al living para expandir reuniones.</li>
-                  <li>Ingresos diferenciados para uso cotidiano y de servicio.</li>
-                  <li>Circulaciones con vistas cruzadas al jardín en todo el trayecto.</li>
+                  <li>Superficie total: 140 m².</li>
+                  <li>Ambientes: 3 dormitorios, 3 baños, galería y cochera doble.</li>
+                  <li>Patio interior que ordena circulaciones y ventila toda la casa.</li>
                 </ul>
               </div>
             </aside>
@@ -430,6 +441,9 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="model__summary">
+            <p>Dionizia prioriza la luz natural y las vistas cruzadas: cada paso mira al patio y cada ambiente se conecta con la galería para vivir adentro y afuera sin esfuerzo.</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -459,19 +473,18 @@
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Conjunto de 4 unidades de vivienda para inversion o renta</span>
-                <p class="description__headline">Volúmenes escalonados y revestimientos nobles para climas fríos.</p>
+                <span class="description__tag">Ficha rápida</span>
+                <p class="description__headline">132 m² con 3 dormitorios, 3 baños y semicubierta.</p>
 
                 <div class="description__body">
-                  <p>Los espacios se resguardan del viento mientras los grandes paños vidriados orientados al sol mantienen la calidez interior.</p>
-                  <p>Texturas cálidas y circulaciones semicubiertas acompañan la vida en entorno patagónico, con rincones listos para el fuego y el abrigo.</p>
+                  <p>Volúmenes escalonados con revestimientos cálidos pensados para climas fríos.</p>
+                  <p>Grandes paños hacia el sol, circulación semicubierta y espacios listos para chimenea.</p>
                 </div>
 
                 <ul class="description__list">
-                  <li>Paneles aislantes reforzados que maximizan el rendimiento térmico.</li>
-                  <li>Chimenea lista para instalar en el corazón del estar.</li>
-                  <li>Circulación semicubierta para moverse afuera protegido.</li>
-                  <li>Hall de ingreso con banco y guardado de abrigo a mano.</li>
+                  <li>Superficie: 132 m² totales.</li>
+                  <li>Programa: 3 dormitorios, 3 baños y semicubierta para autos.</li>
+                  <li>Ideal para desarrollos de 4 unidades para inversión o renta.</li>
                 </ul>
               </div>
             </aside>
@@ -507,6 +520,9 @@
               </div>
             </div>
           </div>
+          <div class="model__summary">
+            <p>Amz I mezcla abrigo y diseño limpio: protege del viento, capta sol y ofrece un conjunto prolijo para renta turística o vivienda permanente.</p>
+          </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
@@ -535,18 +551,18 @@
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Descripción</span>
-                <p class="description__headline">Tipología en L que abraza el jardín para vivir adentro y afuera todo el día.</p>
+                <span class="description__tag">Ficha rápida</span>
+                <p class="description__headline">110 m² en L con 3 dormitorios y 2 baños.</p>
 
                 <div class="description__body">
-                  <p>La galería corrida se apoya en el pliegue para generar sombra, mientras el vidrio esquinero abre el living hacia el patio y enmarca la vegetación.</p>
+                  <p>Planta que abraza el patio con galería corrida y ventanal esquinero en el living.</p>
+                  <p>Suite con salida al jardín y un ambiente flexible para playroom u oficina.</p>
                 </div>
 
                 <ul class="description__list">
-                  <li>Living con vidrio esquinero que integra la vista verde.</li>
-                  <li>Galería techada a lo largo del pliegue de la planta.</li>
-                  <li>Suite principal con salida directa al jardín.</li>
-                  <li>Espacio flexible listo para playroom, estudio o home-office.</li>
+                  <li>Superficie: 110 m² cubiertos.</li>
+                  <li>Ambientes: 3 dormitorios, 2 baños.</li>
+                  <li>Galería en L y cochera abierta integrada al acceso.</li>
                 </ul>
               </div>
             </aside>
@@ -560,6 +576,9 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="model__summary">
+            <p>Rio se vive adentro y afuera: el vidrio esquinero enmarca el verde y la galería acompaña cada reunión, ya sea un asado familiar o una tarde de trabajo remoto.</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -589,18 +608,18 @@
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Descripción</span>
-                <p class="description__headline">Dúplex compacto con planta baja libre y dormitorios arriba.</p>
+                <span class="description__tag">Ficha rápida</span>
+                <p class="description__headline">86 m² dúplex con 2 dormitorios y 2 baños.</p>
 
                 <div class="description__body">
-                  <p>Aprovecha cada metro con un aire de loft: planta baja flexible, visual abierta al patio y un volumen escalonado que marca carácter urbano.</p>
+                  <p>Planta baja libre tipo loft con visual abierta al patio.</p>
+                  <p>Dormitorios en planta alta para separar descanso de la vida social.</p>
                 </div>
 
                 <ul class="description__list">
-                  <li>Gran ventanal hacia un patio privado que extiende el estar.</li>
-                  <li>Planta baja adaptable para home-office o estudio creativo.</li>
-                  <li>Volumen escalonado con balcón francés en el frente.</li>
-                  <li>Baulera bajo escalera para sumar guardado sin ocupar espacio útil.</li>
+                  <li>Superficie: 86 m² totales.</li>
+                  <li>Ambientes: 2 dormitorios, 2 baños.</li>
+                  <li>Gran ventanal hacia patio privado para expandir el estar.</li>
                 </ul>
               </div>
             </aside>
@@ -618,6 +637,9 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="model__summary">
+            <p>El Quincho AMZ I tiene onda urbana: planta baja flexible para asados, fiestas o coworking y dormitorios arriba para dormir en silencio después de todo.</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
