Refine Metodo AMZ section layout

--- a/index.html
+++ b/index.html
@@ -45,86 +45,76 @@
     </section>
 
     <section class="section section--method" id="metodo">
-      <div class="section__header section__header--center">
-        <span class="label">Metodo AMZ</span>
-        <h2>Por que construccion industrializada?</h2>
-        <p>Prefabricamos cada panel en taller. Menos tiempo, menos desperdicio, mejor calidad.</p>
-      </div>
-
       <div class="method">
-        <h3 class="method__title">Etapas del proceso:</h3>
+        <div class="method__intro">
+          <span class="label">Método AMZ</span>
+          <h2>Industria aplicada a la obra</h2>
+          <p>Un proceso cerrado y repetible para reducir incertidumbre, costos y tiempos.</p>
+        </div>
 
-        <div class="method__steps">
-          <div class="method__step">
-            <span class="method__number">1</span>
-            <div class="method__step-content">
-              <h4>Diseño y fabricación de muros</h4>
-              <p>En fábrica se genera un plano de ingeniería a partir del proyecto y se producen los muros con todos los controles de calidad propios de la industria.</p>
+        <div class="method__flow" aria-label="Etapas del proceso industrializado">
+          <div class="method__node">
+            <div class="method__number">01</div>
+            <div class="method__content">
+              <h3>Ingeniería ejecutiva</h3>
+              <p>Planos y especificaciones quedan aprobados antes de mover suelo.</p>
             </div>
           </div>
-
-          <div class="method__step">
-            <span class="method__number">2</span>
-            <div class="method__step-content">
-              <h4>Canalización de muros</h4>
-              <p>Las instalaciones para servicios ya van embebidas dentro del muro. Una vez instalados, no es necesario romper ni intervenir.</p>
+          <div class="method__arrow" aria-hidden="true">→</div>
+          <div class="method__node">
+            <div class="method__number">02</div>
+            <div class="method__content">
+              <h3>Prefabricación</h3>
+              <p>Muros y canalizaciones se producen en planta con control de calidad.</p>
             </div>
           </div>
-
-          <div class="method__step">
-            <span class="method__number">3</span>
-            <div class="method__step-content">
-              <h4>Fundación</h4>
-              <p>Ejecución en terreno según las especificaciones técnicas del proyecto.</p>
+          <div class="method__arrow" aria-hidden="true">→</div>
+          <div class="method__node">
+            <div class="method__number">03</div>
+            <div class="method__content">
+              <h3>Fundación</h3>
+              <p>Terreno listo para recibir el sistema estructural.</p>
             </div>
           </div>
-
-          <div class="method__step">
-            <span class="method__number">4</span>
-            <div class="method__step-content">
-              <h4>Montaje de muros</h4>
-              <p>Instalación rápida y precisa de los muros estructurales.</p>
+          <div class="method__arrow" aria-hidden="true">→</div>
+          <div class="method__node">
+            <div class="method__number">04</div>
+            <div class="method__content">
+              <h3>Montaje</h3>
+              <p>Paneles encastran en serie y el cierre perimetral queda operativo.</p>
             </div>
           </div>
-
-          <div class="method__step">
-            <span class="method__number">5</span>
-            <div class="method__step-content">
-              <h4>Armado de estructura</h4>
-              <p>Vinculación del sistema portante.</p>
-            </div>
-          </div>
-
-          <div class="method__step">
-            <span class="method__number">6</span>
-            <div class="method__step-content">
-              <h4>Colocación de cubierta</h4>
-              <p>Instalación del sistema de techo y protección superior.</p>
-            </div>
-          </div>
-
-          <div class="method__step">
-            <span class="method__number">7</span>
-            <div class="method__step-content">
-              <h4>Terminaciones finales</h4>
-              <p>Acabados, revestimientos y detalles finales de la construcción.</p>
+          <div class="method__arrow" aria-hidden="true">→</div>
+          <div class="method__node">
+            <div class="method__number">05</div>
+            <div class="method__content">
+              <h3>Cubierta y terminaciones</h3>
+              <p>Techo, aislaciones y acabados finales se instalan en secuencia corta.</p>
             </div>
           </div>
         </div>
 
-        <div class="method__result">
-          <p>El resultado es una obra limpia, controlada y eficiente, con reducción de tiempos, desperdicios y errores constructivos.</p>
-          <p class="method__application">Aplicable a viviendas y a cualquier tipo de obra.</p>
-        </div>
-
-        <div class="method__timeline">
-          <div class="method__timeline-item">
-            <span class="method__icon">⚡</span>
-            <span>Obra gris en 1 mes</span>
+        <div class="method__metrics">
+          <div class="method__metric">
+            <span class="method__metric-icon" aria-hidden="true">⚡</span>
+            <div>
+              <strong>Obra gris en 1 mes</strong>
+              <p>Plazos industriales con equipos coordinados desde fábrica.</p>
+            </div>
           </div>
-          <div class="method__timeline-item">
-            <span class="method__icon">⚡</span>
-            <span>Llave en mano en 3 meses</span>
+          <div class="method__metric">
+            <span class="method__metric-icon" aria-hidden="true">⚡</span>
+            <div>
+              <strong>Llave en mano en 3 meses</strong>
+              <p>Menos retrabajo y menor variación en costos finales.</p>
+            </div>
+          </div>
+          <div class="method__metric">
+            <span class="method__metric-icon" aria-hidden="true">✓</span>
+            <div>
+              <strong>Aplicable a vivienda y proyectos mixtos</strong>
+              <p>Escalable a distintas tipologías sin perder trazabilidad.</p>
+            </div>
           </div>
         </div>
       </div>
