Expand method section width and add missing steps

--- a/index.html
+++ b/index.html
@@ -92,6 +92,22 @@
               <p>Techo, aislaciones y acabados finales se instalan en secuencia corta.</p>
             </div>
           </div>
+          <div class="method__arrow" aria-hidden="true">→</div>
+          <div class="method__node">
+            <div class="method__number">06</div>
+            <div class="method__content">
+              <h3>Control de calidad</h3>
+              <p>Checklists y pruebas de hermeticidad aseguran desvíos mínimos.</p>
+            </div>
+          </div>
+          <div class="method__arrow" aria-hidden="true">→</div>
+          <div class="method__node">
+            <div class="method__number">07</div>
+            <div class="method__content">
+              <h3>Entrega y postventa</h3>
+              <p>Documentación completa y seguimiento para habitar desde el día uno.</p>
+            </div>
+          </div>
         </div>
 
         <div class="method__metrics">
