--- a/index.html
+++ b/index.html
@@ -149,26 +149,25 @@
           <div class="model__head">
             <div>
               <h3>Casa Bixa</h3>
-              <p class="model__headline">44 m2 · 2 dorm · 1 banos </p>
+              <p class="model__headline">45 m2 · 2 dorm · 1 baño </p>
             </div>
-            <span class="badge">Premium light</span>
+
           </div>
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Ficha rápida</span>
-                <p class="description__headline">44 m² listos con 2 dormitorios y 1 baño.</p>
+                
 
                 <div class="description__body">
-                  <p>Ambiente social integrado con cocina, living y comedor en línea directa al exterior.</p>
+                  <p>
+                      Vivienda compacta y funcional, diseñada para optimizar cada metro cuadrado.
+                      Cuenta con cocina integrada, living-comedor, dos dormitorios y un baño completo.
+                      Dispone de buena circulación interior, ventilación cruzada y doble acceso desde frente y contrafrente.
+                      Incluye espacios previstos para muebles de guardado, optimizando el uso del interior</p>
                   <p>Formato compacto pensado para entrar rápido al lote y quedar habitable sin vueltas.</p>
                 </div>
 
-                <ul class="description__list">
-                  <li>Superficie total: 44 m² cubiertos.</li>
-                  <li>Ambientes: 2 dormitorios + 1 baño completo.</li>
-                  <li>Ideal como primera vivienda o módulo de renta liviano.</li>
-                </ul>
+               
               </div>
             </aside>
             <div class="model__content">
@@ -192,14 +191,14 @@
             </div>
           </div>
           <div class="model__summary">
-            <p>Bixa entra en casi cualquier terreno y se arma rápido; minimalista, luminosa y lista para disfrutar o poner a producir sin demoras.</p>
+            <p>Disponible opción llave en mano (3 meses) y obra gris (1 mes).</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Bixa">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Planos/WhatsApp Image 2025-12-12 at 11.45.13.jpeg" target="_blank" rel="noopener">Plano principal</a>
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Planos/2.AXO2.jpg" target="_blank" rel="noopener">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Planos/plano_bixa_1" target="_blank" rel="noopener">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Planos/plano_bixa_2" target="_blank" rel="noopener">Plano principal</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
