--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
         <span class="sr-only">Amazonia - Viviendas industrializadas</span>
       </a>
 
-      <div class="page-title">Catalogo</div>
+      <div class="page-title">PORTFOLIO</div>
 
       <nav class="nav">
-        <a href="#obra" class="nav__link">Obra</a>
-        <a href="#metodo" class="nav__link">Metodo</a>
+        <a href="#metodo" class="nav__link">Sistema AMZ</a>
+        <a href="#metodo" class="nav__link">Muros AMZ</a>
         <a href="#modelos" class="nav__link">Modelos</a>
+        <a href="#modelos" class="nav__link">Obras</a>
         <a href="#contacto" class="nav__link nav__link--cta">Contactar</a>
       </nav>
     </div>
@@ -204,7 +205,8 @@
             <div class="media-dropdown dropdown">
               <button class="btn media-dropdown__toggle" type="button">Ver video</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Videos de Casa Bixa">
-                <a class="media-dropdown__item" href="Multimedia/Prop1Bixa/Videos/BIXA INTERIOR COMPLETO.mp4" target="_blank" rel="noopener">Recorrido principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Videos/BIXA INTERIOR COMPLETO.mp4" target="_blank" rel="noopener">Recorrido principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Videos/VIDEO BIXA EXTERIOR.mp4" target="_blank" rel="noopener">Recorrido principal</a>
               </div>
             </div>
           </div>
@@ -670,13 +672,17 @@
       <h2>Listo para construir?</h2>
       <p>Contactanos y te asesoramos sobre el modelo ideal.</p>
       <div class="cta__buttons">
-        <a href="tel:+5491112345678" class="btn btn--contact">
+        <a href="tel:+5493415217974" class="btn btn--contact">
           <span class="btn__icon">📞</span>
           <span class="btn__text">Llamanos</span>
         </a>
-        <a href="mailto:contacto@amazonia.com" class="btn btn--contact">
+        <a href="mail: comercial@amazoniaamz.com" class="btn btn--contact">
           <span class="btn__icon">✉️</span>
           <span class="btn__text">Escribinos</span>
+        </a>
+        <a href="https://www.amazoniaamz.com/" class="btn btn--contact">
+          <span class="btn__icon">✉️</span>
+          <span class="btn__text">Sitio web</span>
         </a>
       </div>
     </section>
@@ -695,7 +701,7 @@
   </div>
 
   <footer class="footer">
-    <p><strong>Amazonia</strong> - Viviendas industrializadas - 2024</p>
+    <p><strong>Amazonía</strong> - Industrializando la construcción</p>
   </footer>
 
   <script>
