--- a/index.html
+++ b/index.html
@@ -669,19 +669,19 @@
     </section>
 
     <section class="cta" id="contacto">
-      <h2>Listo para construir?</h2>
-      <p>Contactanos y te asesoramos sobre el modelo ideal.</p>
+      <h2>¿Listo para construir?</h2>
+      <p>Contactanos y te asesoramos sobre la mejor alternativa para tu proyecto.</p>
       <div class="cta__buttons">
         <a href="tel:+5493415217974" class="btn btn--contact">
           <span class="btn__icon">📞</span>
           <span class="btn__text">Llamanos</span>
         </a>
-        <a href="mail: comercial@amazoniaamz.com" class="btn btn--contact">
+        <a href="mailto:comercial@amazoniaamz.com" class="btn btn--contact">
           <span class="btn__icon">✉️</span>
           <span class="btn__text">Escribinos</span>
         </a>
         <a href="https://www.amazoniaamz.com/" class="btn btn--contact">
-          <span class="btn__icon">✉️</span>
+          <span class="btn__icon"></span>
           <span class="btn__text">Sitio web</span>
         </a>
       </div>
