Update Camelia and Belladona descriptions

--- a/index.html
+++ b/index.html
@@ -224,18 +224,19 @@
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Ficha rápida</span>
-                <p class="description__headline">45 m² iniciales que crecen a 58 m² y 71 m² sin obra pesada.</p>
+                <span class="description__tag">Vivienda evolutiva industrializada</span>
+                <p class="description__headline">Una casa que nace completa y crece por etapas, manteniendo la misma estética y funcionalidad.</p>
 
                 <div class="description__body">
-                  <p>Arrancás con un módulo listo para vivir y sumás dormitorios cuando haga falta.</p>
-                  <p>Todo el plan está pensado para ampliar sin romper lo ya terminado.</p>
+                  <p>El esquema de crecimiento está previsto desde el inicio: se amplía la superficie manteniendo coherencia constructiva y un uso fluido de los ambientes.</p>
+                  <p>Incluye living–comedor, cocina, baño completo y dormitorios con espacios para placares, circulación clara y buena ventilación e iluminación. La galería semicubierta con asador se integra a la cocina, con lugar para lavarropas, mesada de apoyo y bacha exterior.</p>
+                  <p>Casa Camelia permite comenzar hoy y seguir ampliando cuando sea necesario mediante un sistema eficiente y planificado, sin obras disruptivas.</p>
                 </div>
 
                 <ul class="description__list">
-                  <li>Etapa 1: 45 m² con 1 dormitorio y baño completo.</li>
-                  <li>Etapa 2: 58 m² totales al agregar 1 dormitorio extra.</li>
-                  <li>Etapa 3: 71 m² finales con 3 dormitorios para familia completa.</li>
+                  <li><strong>Casa Camelia 1 – Etapa inicial:</strong> 45 m² cubiertos con cocina, comedor, living, 1 dormitorio y baño completo. Galería semicubierta de 19 m² apta cochera.</li>
+                  <li><strong>Casa Camelia 2 – Primera ampliación:</strong> se suma un segundo dormitorio, alcanzando 58 m² cubiertos.</li>
+                  <li><strong>Casa Camelia 3 – Ampliación final:</strong> se incorpora un tercer dormitorio de 13 m² para totalizar 71 m² cubiertos.</li>
                 </ul>
               </div>
             </aside>
@@ -265,7 +266,7 @@
             </div>
           </div>
           <div class="model__summary">
-            <p>Camelia acompaña el crecimiento: arrancás liviano y seguís sumando metros cuando la vida lo pida, siempre con el mismo look prolijo y moderno.</p>
+            <p>Camelia acompaña el crecimiento con un plan por etapas: comenzás liviano y seguís sumando metros cuando la vida lo pida, siempre con el mismo look prolijo y moderno.</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -295,19 +296,11 @@
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Ficha rápida</span>
-                <p class="description__headline">160 m² en dos plantas con 4 dormitorios y 3 baños.</p>
-
                 <div class="description__body">
-                  <p>Doble altura central, terrazas y vidrio de piso a techo para lotes con buenas vistas.</p>
-                  <p>Zona social abajo, ala privada arriba y balconeo interno para darle aire al estar.</p>
+                  <p>Vivienda unifamiliar de planta compacta con espacios unificados, que integra living–comedor y cocina en un área continua y funcional. Presenta ventilación e iluminación, con puerta-balcón que vincula el espacio interior con la galería semicubierta, la cual puede utilizarse como espacio para guardado de vehículo.</p>
+                  <p>Cuenta con dos dormitorios con espacios previstos para placares y baño completo, con una distribución que prioriza la funcionalidad y el aprovechamiento del espacio.</p>
+                  <p>Superficie total: 75 m². Superficie cubierta: 62 m². Superficie semicubierta: 13 m².</p>
                 </div>
-
-                <ul class="description__list">
-                  <li>Superficie: 160 m² totales.</li>
-                  <li>Programa: 4 dormitorios, 3 baños, family y terrazas.</li>
-                  <li>Garage lateral para acceso cómodo sin cortar el jardín.</li>
-                </ul>
               </div>
             </aside>
             <div class="model__content">
